force-app/main/default/objects/Spiff_Request__c/Spiff_Request__c.object-meta.xml
<CustomObject>
    <description>Requests are tied to a Contact and Account where there is a request for spiff to be paid out</description>
    <label>Spiff Request</label>
    <nameField>
        <displayFormat>S-{MM}{YYYY}-{000000}</displayFormat>
        <label>Spiff Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spiff Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>