force-app/main/default/objects/Spiff_Request__c/fields/Added_Special_SPIF__c.field-meta.xml
<CustomField>
    <fullName>Added_Special_SPIF__c</fullName>
    <label>Added Special SPIF $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>