force-app/main/default/objects/Spiff_Request__c/fields/Distributor_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name_s__c</fullName>
    <label>Distributor Name(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>