force-app/main/default/objects/Spiff_Request__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Spiff Requests (End User)</relationshipLabel>
    <relationshipName>Spiff_RequestsEU</relationshipName>
    <type>Lookup</type>
</CustomField>