force-app/main/default/objects/Spiff_Request__c/fields/End_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Spiff Requests (End User Contact)</relationshipLabel>
    <relationshipName>Spiff_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>