force-app/main/default/objects/Spiff_Request__c/fields/End_User_Email__c.field-meta.xml
<CustomField>
    <fullName>End_User_Email__c</fullName>
    <label>End User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>