force-app/main/default/objects/Spiff_Request__c/fields/For_All_Units_Total_Spiff_Number__c.field-meta.xml
<CustomField>
    <fullName>For_All_Units_Total_Spiff_Number__c</fullName>
    <formula>Total_Spiff_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For All Units Total Spiff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>