force-app/main/default/objects/Spiff_Request__c/fields/manualPOSInputed__c.field-meta.xml
<CustomField>
    <fullName>manualPOSInputed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>manualPOSInputed</label>
    <type>Checkbox</type>
</CustomField>