force-app/main/default/objects/Spiff_Request__c/fields/Partner_Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Incentive_Type__c</fullName>
    <formula>if(not(isblank(text(Requester__r.Account.Parent.Partner_Incentive_Type__c ))), text(Requester__r.Account.Parent.Partner_Incentive_Type__c ),
text(Requester__r.Account.Partner_Incentive_Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Incentive Type</label>
    <type>Text</type>
</CustomField>