force-app/main/default/objects/Spiff_Request__c/fields/Per_Unit_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Spiff__c</fullName>
    <label>Standard SPIFF $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>