force-app/main/default/objects/Spiff_Request__c/fields/productLine__c.field-meta.xml
<CustomField>
    <fullName>productLine__c</fullName>
    <formula>text(Product__r.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>productLine</label>
    <type>Text</type>
</CustomField>