force-app/main/default/objects/Spiff_Request__c/fields/Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Date__c</fullName>
    <label>Rejection Date</label>
    <type>Date</type>
</CustomField>