force-app/main/default/objects/Spiff_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Spiff Requests</relationshipLabel>
    <relationshipName>Spiff_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>