force-app/main/default/objects/Spiff_Request__c/fields/Requester_Company__c.field-meta.xml
<CustomField>
    <fullName>Requester_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requester Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Spiff Requests</relationshipLabel>
    <relationshipName>Spiff_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>