force-app/main/default/objects/Spiff_Request__c/fields/Spa_Product__c.field-meta.xml
<CustomField>
    <fullName>Spa_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spa Product</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Spiff Requests</relationshipLabel>
    <relationshipName>Spiff_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>