force-app/main/default/objects/Spiff_Request__c/fields/Spiff_Claim_Payment__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Claim_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spiff Claim Payment</label>
    <referenceTo>Spiff_Claim_Payment__c</referenceTo>
    <relationshipLabel>Spiff Requests</relationshipLabel>
    <relationshipName>Spiff_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>