force-app/main/default/objects/Spiff_Request__c/fields/Total_Spiff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Spiff_Amount__c</fullName>
    <formula>Quantity__c *  Total_SPIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For All Units Total Spiff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>