force-app/main/default/objects/Spiff_Request__c/fields/Total_SPIFF_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_SPIFF_Number__c</fullName>
    <formula>Total_SPIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SPIFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>