force-app/main/default/objects/Spiff_Request__c/listViews/All_Spiff_Requests.listView-meta.xml
<ListView>
    <fullName>All_Spiff_Requests</fullName>
    <columns>NAME</columns>
    <columns>End_Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>Distributor__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Payment_Ref__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All  My Spiff Requests</label>
    <language>en_US</language>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>