force-app/main/default/objects/Spiff_Request__c/listViews/Submitted_to_Accounting_Spiff_Requests.listView-meta.xml
<ListView>
    <fullName>Submitted_to_Accounting_Spiff_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>End_Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Distributor_Name_s__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to Accounting</value>
    </filters>
    <label>Submitted to Accounting Spiff Requests</label>
    <language>en_US</language>
</ListView>